# linkmerce

./: .dockerignore  .gitignore  Dockerfile  README.md  clear_cache.sh  dbt-docs.sh  pyproject.toml  skills-lock.json
.github/instructions/: codex.instructions.md  format.instructions.md  lm.instructions.md
airflow/: README.md  docker-compose.yaml  exec_db.sh  init.sh
airflow/dags/: aggregated_sales_first.py  aggregated_sales_next.py  all_login.py  brand_price.py  brand_sales_first.py  brand_sales_next.py  cj_eflexs_stock.py  cj_loisparcel_invoice.py  coupang_adreport.py  coupang_campaign.py  coupang_login.py  coupang_option.py  coupang_rocket_sales.py  ecount_product_inventory.py  (+29 more)
collect/: __init__.py  base.py
crontab/: coupang_login.py  coupang_login.sh  coupang_login_advertising.sh  coupang_login_wing.sh
dbt/: README.md  dbt_project.yml
dbt_bigquery/: README.md  dbt_project.yml  selectors.yml  serve.sh
dbt_postgres/: dbt_project.yml  serve.sh
docs/: ai-guidelines.md  analytics-db-evaluation.md  dbt-analysis-query-porting-plan.md  dbt-mart-join-only-column-split.md  dbt-optimization-backlog.md  dbt-projects-operation.md  dbt-setup-guide.md  dbt-source-column-split-candidates.md  gitattributes.md  load-test-plan.md  plan.md  postgres-RETURNING_OLD_NEW.md  postgres-clickhouse-bigquery-sync-plan.md  postgres-partitioning.md  size.yaml
parse/: __init__.py
postgres/: Dockerfile  README.md  docker-compose.yaml  init.sql  partman_maintenance.sql
src/: README.md
streamlit/: Dockerfile  app.py  docker-compose.yaml
utils/: graphql.py  headers.py  pandas.py
(+353 files in other folders)
